<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/bj8"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/iv_go_vip"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/bgplay"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center|left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/isvip_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textStyle="bold"
                android:text="成为VIP会员！享受超多特权！"
                android:textColor="#ffdfa0"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/isvip_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:lines="1"
                android:text="海量精选会员内容免费看 · 抢先看 · 高清视频随心挑..."
                android:textColor="@color/gray_999"
                android:textSize="11sp"
                app:drawableLeftCompat="@drawable/ic_shijian" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:id="@+id/iv_go_vipm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_skip8"
                android:gravity="center"
                android:paddingTop="6dp"
                android:paddingBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="立即开通"
                    android:textStyle="bold"
                    android:textColor="#5d4829"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="-36dp"
                android:background="@drawable/shape_bg_red_radius_25dp"
                android:paddingLeft="6dp"
                android:paddingTop="2dp"
                android:paddingRight="6dp"
                android:paddingBottom="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="超值"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bof"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_tv_playinfo_title"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:textSize="@dimen/fab_margin"
            android:textStyle="bold"
            tools:text="爱的故事" />


        <LinearLayout
            android:id="@+id/tv_av_danmakubj"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:background="@drawable/bg_skip4"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="2dp">

            <TextView
                android:id="@+id/tv_av_danmaku2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingEnd="5dp"
                android:text="点我发弹幕"
                android:textSize="11sp"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="26dp"
                android:layout_height="18dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/danmu" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="12dp"
        android:gravity="center_vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg_fenlei"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"

            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_svv_playtypePic"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:background="@drawable/playinfo_dypic" />

            <TextView
                android:id="@+id/item_tv_playinfo_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:gravity="center_vertical"
                android:textColor="#b5713b"
                android:textSize="@dimen/font_small"
                tools:text="类型" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_svv_playinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/shape_bg_leixing"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#238576"
            android:textSize="@dimen/font_small"
            tools:text="古典" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_tv_playinfo_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/shape_bg_nianfen"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#8b9298"
            android:textSize="@dimen/font_small"
            tools:text="2022" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_tv_playinfo_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/shape_bg_nianfen"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:singleLine="false"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#8b9298"
            android:textSize="@dimen/font_small"
            tools:text="美国" />

    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_tv_playinfo_grade"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="-15dp"
            android:layout_marginLeft="3dp"
            android:background="@drawable/pingfen" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_tv_playinfo_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:drawablePadding="5dp"
            android:layout_marginTop="-12dp"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:textColor="@color/gray_999"
            android:textSize="@dimen/font_small"
            tools:text="5.9分" />



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_tv_playinfo_intro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_intro2"
            android:drawablePadding="7dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLength="7"
            android:text="简介"
            android:textColor="@color/gray_999"
            android:textSize="@dimen/font_smallest" />





        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_tv_playinfo_collect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_collection2"
            android:drawablePadding="9dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLength="7"
            android:text="@string/collect"
            android:textColor="@color/gray_999"
            android:textSize="@dimen/font_smallest" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_tv_playinfo_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_download2"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLength="7"
            android:text="@string/download"
            android:textColor="@color/gray_999"
            android:textSize="@dimen/font_smallest" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_tv_playinfo_feedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_feedback2"
            android:drawablePadding="11dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLength="9"
            android:text="@string/feedback"
            android:textColor="@color/gray_999"
            android:textSize="@dimen/font_smallest" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_tv_playinfo_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share2"
            android:drawablePadding="13dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLength="7"
            android:text="@string/share"
            android:textColor="@color/gray_999"
            android:textSize="@dimen/font_smallest" />
    </LinearLayout>





    <!-- 播放源和选集-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/changeSourceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_play_resource"
                android:textColor="@color/textColor"
                android:textSize="@dimen/font_small"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/select_play_resource_hit"
                android:textColor="@color/gray_999"
                android:textSize="@dimen/font_smallest" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlPlaySource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_marginRight="10dp"
            app:tabGravity="fill"
            app:tabIndicatorHeight="0dp"
            app:tabMode="scrollable"
            app:tabPaddingEnd="5dp"
            app:tabPaddingStart="5dp"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextAppearance="@style/MyTabLayoutTextAppearance3"
            app:tabTextColor="@color/gray_999" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selection_play_source"
                android:textColor="@color/textColor"
                android:textSize="@dimen/font_small"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkOrder"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/selector_order"

                android:button="@null"
                android:gravity="center" />

            <TextView
                android:id="@+id/tvLastest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/gray_999"
                android:textSize="@dimen/font_small" />

            <ImageView
                android:id="@+id/iv_lastest"
                android:layout_width="16dp"
                android:background="@drawable/ic_enter"
                android:layout_height="16dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLastest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="7dp"

            android:scrollbars="none"
            tools:itemCount="3"
            tools:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/item_video_source"
            tools:orientation="horizontal" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/changeSourceTipLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:background="@drawable/shape_bg_gray_radius_10dp"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/dp_10"
        android:padding="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="提示："
            android:textColor="@color/ls"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:lineSpacingMultiplier="1.5"
            android:text="1 . 由于【播放源】不同、播放失败请更换【播放源】\n2 . 若当前播放不顺畅或模糊、请切换【播放源】\n3 . 影片出现任何广告请谨慎、不参与任何赞助支持"
            android:textColor="@color/gray_999"
            android:textSize="10dp" />
    </LinearLayout>
    <com.ruifenglb.www.ad.AdWebView
        android:id="@+id/awvPlayerDown"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:id="@+id/bannerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>